bug fixes and database example entries added
-fixed profile picture not showing up
-added sample database entries in SQL file
-updated formatting of box container in shop->category

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,8 @@
 }
 
 .products .box-container .box img{
-   width: 100%;
+   width: auto;
+   height: 200px;
    margin-bottom: 1rem;
 }
 
